--- a/frontend/src/components/NavBar/NavBar.css
+++ b/frontend/src/components/NavBar/NavBar.css
@@ -1,79 +1,79 @@
 * {
-	box-sizing: border-box;
-	font-family: "Inter", sans-serif;
+    box-sizing: border-box;
+    font-family: 'Inter', sans-serif;
 }
 
 body {
-	margin: 0;
-	background-color: #fafafa;
+    margin: 0;
+    background-color: #fafafa;
 }
 
 #nav {
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-	padding: 20px 40px;
-	background-color: #027639;
-	width: 100%;
-	color: #fff;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 20px 40px;
+    background-color: #027639;
+    width: 100%;
+    color: #fff;
 }
 
 #nav-logo {
-	margin-right: auto;
-	font-size: x-large;
-	text-align: center;
+    margin-right: auto;
+    font-size: x-large;
+    text-align: center;
 }
 
 #nav-links {
-	list-style-type: none;
-	padding: 0;
-	margin: 0;
-	display: flex;
-	flex-direction: row;
-	gap: 20px;
-	font-size: large;
-	align-items: center;
-	text-align: center;
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    font-size: large;
+    align-items: center;
+    text-align: center;
 }
 
 .nav-link {
-	background: none;
-	border: none;
-	color: #fff;
-	font-size: large;
+    background: none;
+    border: none;
+    color: #fff;
+    font-size: large;
 }
 
 .nav-link * {
-	text-decoration: none;
-	color: inherit;
+    text-decoration: none;
+    color: inherit;
 }
 
 .nav-link:hover {
-	cursor: pointer;
-	text-decoration: underline;
+    cursor: pointer;
+    text-decoration: underline;
 }
 
 footer {
-	width: 100%;
-	display: flex;
-	flex-direction: row;
-	justify-content: center;
-	align-items: center;
-	padding: 20px;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
 }
 
 @media (max-width: 650px) {
-	#nav-logo {
-		font-size: 20px;
-		display: none;
-	}
+    #nav-logo {
+        font-size: 20px;
+        display: none;
+    }
 
-	#nav {
-		padding: 10px 20px;
-		justify-content: center;
-	}
+    #nav {
+        padding: 10px 20px;
+        justify-content: center;
+    }
 
-	.nav-link {
-		font-size: 14px;
-	}
+    .nav-link {
+        font-size: 14px;
+    }
 }
