--- a/frontend/src/components/Calendar/Calendar.css
+++ b/frontend/src/components/Calendar/Calendar.css
@@ -138,7 +138,7 @@ td:nth-child(2) {
 
 .calendar-available-box,
 .calendar-preferred-box {
-    width: 100%;
+    width: 80%;
     height: 100%;
     display: block;
 }
@@ -148,12 +148,14 @@ td:nth-child(2) {
     flex-direction: row;
     flex-grow: 1;
     width: 50%;
+    justify-content: flex-end;
 }
 
 .calendar-index-container p {
     padding: 0;
     margin: 0;
     width: 20%;
+    padding-right: 100px;
 }
 
 .calendar-mobile-buttons {
