--- a/frontend/src/pages/NewMeeting/NewMeeting.css
+++ b/frontend/src/pages/NewMeeting/NewMeeting.css
@@ -8,7 +8,7 @@
 }
 
 /* TODO: This should allow scroll on mobile */
-.content {
+.new-meeting-content {
     display: flex;
     flex-direction: column;
     align-items: start;
@@ -91,24 +91,6 @@ td {
 
 td:nth-child(2) {
     border-left: 1px solid rgba(0, 0, 0, 0.25);
-}
-
-.meetings {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    height: 100%;
-    min-width: 300px;
-    max-width: 500px;
-    align-items: center;
-    max-height: 620px;
-}
-
-@media (max-width: 1108px) {
-    .meetings {
-        width: 100%;
-        max-width: none;
-    }
 }
 
 .attending-name {
