--- a/frontend/src/pages/MeetingDetails/MeetingDetails.css
+++ b/frontend/src/pages/MeetingDetails/MeetingDetails.css
@@ -104,6 +104,30 @@ td:nth-child(2) {
   max-height: 620px;
 }
 
+.meeting-agenda-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  border: 1px solid #ccc; 
+  border-radius: 10px; 
+  padding: 20px 0; 
+}
+
+.agenda-title {
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.meeting-agenda {
+  display: block; 
+  margin-top: 10px; 
+  text-align: left;
+  width: 90%;
+}
+
+
 @media (max-width: 1108px) {
   .md-meetings {
     width: 100%;
