--- a/frontend/src/pages/contacts/contacts.css
+++ b/frontend/src/pages/contacts/contacts.css
@@ -293,7 +293,23 @@ input {
     }
 }
 
-footer {
-    position: absolute;
-    bottom: 0;
+/* @media screen and (max-height: 800px) {
+    .contacts-footer {
+        position: absolute;
+        bottom: 0;
+        display: flex;
+        width: 100%;
+        justify-content: center;
+    }
+
+} */
+
+.contacts-content{
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+.contacts-footer {
+    margin-top:auto;
 }
