--- a/frontend/src/pages/MeetingDetails/MeetingDetails.css
+++ b/frontend/src/pages/MeetingDetails/MeetingDetails.css
@@ -427,3 +427,45 @@ h3 {
 .md-bottom-wrapper .button {
   width: 50%;
 }
+
+.md-notification-wrapper {
+  position: absolute;
+  top: 80px;
+  right: 20px;
+  height: 100%;
+  pointer-events: none;
+  z-index: 1;
+}
+
+.md-notification {
+  position: sticky;
+  display: flex;
+  top: 20px;
+  background-color: rgba(153, 204, 255, 0.8);
+  height: 52px;
+  padding: 10px;
+  vertical-align: middle;
+}
+
+.md-notification p {
+  display: inline;
+  font-size: 2rem;
+  /* background-color: rgba(153, 204, 255, 0.5); */
+  /* height: 52px; */
+  /* padding: 10px; */
+  vertical-align: middle;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.md-alert {
+  height: 100%;
+  margin-right: 5px;
+}
+
+.md-scheduled-meeting {
+  margin: 0 auto;
+  text-align: center;
+}
