--- a/frontend/src/pages/MeetingDetails/MeetingDetails.css
+++ b/frontend/src/pages/MeetingDetails/MeetingDetails.css
@@ -113,6 +113,9 @@ td:nth-child(2) {
   border: 1px solid #ccc; 
   border-radius: 10px; 
   padding: 20px 0; 
+  overflow-y: auto; 
+  /* overflow-x: hidden;  */
+  white-space: pre-wrap;
 }
 
 .agenda-title {
@@ -125,6 +128,10 @@ td:nth-child(2) {
   margin-top: 10px; 
   text-align: left;
   width: 90%;
+  min-height: 500px;
+  overflow-x: hidden;
+  white-space: pre-wrap;
+  overflow-wrap: break-word; 
 }
 
 
@@ -468,4 +475,16 @@ h3 {
 .md-scheduled-meeting {
   margin: 0 auto;
   text-align: center;
+}
+
+.agenda-button-container {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
+.editing-mode {
+  background-color: #f0f0f0;
+  border: 1px solid #ccc; 
+  padding: 5px; 
 }
